--- a/content/common/src/main/res/values/bigbrother_strings.xml
+++ b/content/common/src/main/res/values/bigbrother_strings.xml
@@ -8,4 +8,8 @@
     <string name="close">Close</string>
     <string name="copy_feedback">key %1s copied</string>
     <string name="search_hint">Search key or value</string>
+    <string name="delete">Delete</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
 </resources>
