--- a/content/proxy/src/main/res/layout/bigbrother_dialog_actions.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_dialog_actions.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:editable="false"
-            android:hint="Selecione uma ação" />
+            android:hint="@string/proxy_add_action_action_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,7 +53,7 @@
             android:id="@+id/proxy_action_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Name" />
+            android:hint="@string/proxy_add_action_name_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -71,7 +71,7 @@
             android:id="@+id/proxy_action_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Value" />
+            android:hint="@string/proxy_add_action_value_hint" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -90,7 +90,7 @@
             android:id="@+id/proxy_action_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Body"
+            android:hint="@string/proxy_add_action_body_hint"
             android:inputType="textMultiLine"
             android:maxLines="10"
             android:scrollHorizontally="true"
