--- a/content/proxy/src/main/res/layout/bigbrother_dialog_list_endpoints.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_dialog_list_endpoints.xml
@@ -27,7 +27,7 @@
                     android:id="@+id/proxy_endpoint_search_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="teste" />
+                    android:hint="@string/proxy_list_url_search_hint" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="10dp"
-            android:text="empty"
+            android:text="@string/proxy_list_url_empty_label"
             android:textColor="@color/bb_text_title"
             android:textSize="17sp" />
 
