--- a/content/proxy/src/main/res/values/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values/bigbrother_strings.xml
@@ -13,10 +13,42 @@
     <string name="proxy_set_path_message">To edit the endpoint before the request is executed</string>
     <string name="proxy_set_header_message">To add or edit a header before the request is executed</string>
     <string name="proxy_remove_header_message">To remove a header before the request is executed</string>
-    <string name="proxy_set_query_message">To add or edit a query string before the request is executed</string>
-    <string name="proxy_remove_query_message">To remove a query string before the request is executed</string>
+    <string name="proxy_set_query_message">To add or edit a queryString before the request is executed</string>
+    <string name="proxy_remove_query_message">To remove a queryString before the request is executed</string>
 
-    <string name="proxy_set_header_description">Adicionar ou editar o header %s para com o valor %s</string>
-    <string name="proxy_set_path_description">Alterar o path request para %s \"%s\"</string>
-    <string name="proxy_set_body_description">Usar o body customizado:</string>
+    <string name="proxy_set_header_description">Adds or edits the \"%s\" header with the value \"%s\"</string>
+    <string name="proxy_set_path_description">Changes the request path to %s\"%2s\"</string>
+    <string name="proxy_set_body_description">Replaces the request body</string>
+    <string name="proxy_set_query_description">Adds or edits the \"%s\" queryString with the value \"%s\"</string>
+    <string name="proxy_remove_header_description">Removes the \"%s\" header</string>
+    <string name="proxy_remove_query_description">Removes the \"%s\" queryString</string>
+
+    <string name="proxy_required_field">Required field</string>
+    <string name="proxy_json_invalid">Invalid format\n%1$s</string>
+    <string name="proxy_spaces_error">This field cannot contain spaces</string>
+    <string name="proxy_rule_title">Creating a new rule</string>
+    <string name="proxy_rule_name_helper">It might be a good idea to add a more descriptive name for your rule, but random names are fun!</string>
+    <string name="proxy_rule_name_hint">Rule name</string>
+    <string name="proxy_rule_condition_title">Conditions</string>
+    <string name="proxy_rule_path_hint">Path</string>
+    <string name="proxy_rule_path_helper">Use * if you want this rule to affect all paths</string>
+    <string name="proxy_rule_header_helper">Only requests containing these headers will be affected</string>
+    <string name="proxy_rule_header_hint">Headers</string>
+    <string name="proxy_rule_action_title">Actions</string>
+    <string name="proxy_rule_empty_label">No action added</string>
+    <string name="proxy_rule_empty_button">Add action</string>
+    <string name="proxy_add_action_action_hint">Select an action</string>
+    <string name="proxy_add_action_name_hint">Name</string>
+    <string name="proxy_add_action_value_hint">Value</string>
+    <string name="proxy_add_action_body_hint">Body</string>
+    <string name="proxy_list_url_search_hint">Search URL</string>
+    <string name="proxy_list_url_empty_label">No URL found</string>
+    <string name="proxy_list_rules_search_hint">Search rule</string>
+    <string name="proxy_list_rules_empty_label">No proxy rule created</string>
+    <string name="proxy_list_rules_empty_button">Add rule</string>
+    <string name="proxy_add_action_title">New Action</string>
+    <string name="proxy_edit_action_title">Editing</string>
+    <string name="proxy_add_header_title">Add Header</string>
+    <string name="proxy_actions_afects_all">Affects all requests</string>
+    <string name="proxy_actions_afects_few">Affects some requests</string>
 </resources>
