move hardcoded strings para arquivos de string

--- a/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
@@ -43,4 +43,5 @@
     <string name="proxy_add_header_title">Adicionar Header</string>
     <string name="proxy_actions_afects_all">Afeta todas as requests</string>
     <string name="proxy_actions_afects_few">Afeta algumas requests</string>
+    <string name="proxy_actions_do_nothing">Nenhuma ação adicionada</string>
 </resources>
