adiciona nova action de mudar method

--- a/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
+++ b/content/proxy/src/main/res/values-pt/bigbrother_strings.xml
@@ -4,11 +4,13 @@
     <string name="proxy_set_body_message">Para editar o body antes de ser executado o request</string>
     <string name="proxy_set_path_message">Para editar o endpoint antes de ser executado o request</string>
     <string name="proxy_set_header_message">Para adicionar ou editar um header antes de ser executado o request</string>
+    <string name="proxy_set_method_message">Para alterar o method do request</string>
     <string name="proxy_remove_header_message">Para remover um header antes de ser executado o request</string>
     <string name="proxy_set_query_message">Para adicionar ou editar uma queryString antes de ser executado o request</string>
     <string name="proxy_remove_query_message">Para remover uma queryString antes de ser executado o request</string>
 
     <string name="proxy_set_header_description">Adiciona ou edita o header \"%s\" com o valor \"%s\"</string>
+    <string name="proxy_set_method_description">Muda o method do request para %s\"%2s\"</string>
     <string name="proxy_set_path_description">Altera o path request para %s\"%2s\"</string>
     <string name="proxy_set_body_description">Substitui o body request</string>
     <string name="proxy_set_query_description">Adiciona ou edita a queryString \"%s\" com o valor \"%s\"</string>
