--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -113,6 +113,7 @@
         <br.com.mrocigno.bigbrother.ui.GroupLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_margin="10dp"
             android:text="Logs">
 
