Refactor: Add more options on proxy rules
- Adds options to add method and header conditions
- Changes endpoint list dialog to show method and path
- Adds simple differ for proxy rules
- Adds option to enable/disable all rules
- Removes unused string differ
- Minor bug fixes

--- a/content/common/src/main/res/values/bigbrother_styles.xml
+++ b/content/common/src/main/res/values/bigbrother_styles.xml
@@ -80,7 +80,7 @@
         <item name="colorOnPrimary">@android:color/white</item>
     </style>
 
-    <style name="BigBrotherSwitch" parent="Widget.AppCompat.Button">
+    <style name="BigBrotherSwitch">
         <item name="colorControlActivated">@color/bb_brand_default</item>
     </style>
 </resources>
