--- a/content/proxy/src/main/res/layout/bigbrother_dialog_list_endpoints.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_dialog_list_endpoints.xml
@@ -1,7 +1,8 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:minHeight="200dp">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
