--- a/content/proxy/src/main/res/layout/bigbrother_fragment_proxy.xml
+++ b/content/proxy/src/main/res/layout/bigbrother_fragment_proxy.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -13,35 +14,58 @@
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingVertical="10dp"
+            android:paddingTop="10dp"
             app:contentScrim="@android:color/transparent"
             app:layout_scrollFlags="enterAlways|scroll">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/proxy_search_layout"
-                style="@style/SearchView"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="50dp"
-                android:paddingHorizontal="10dp">
+                android:layout_height="wrap_content">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/proxy_search_view"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/proxy_search_layout"
+                    style="@style/SearchView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/proxy_list_rules_search_hint" />
+                    android:layout_marginEnd="50dp"
+                    android:paddingHorizontal="10dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/proxy_search_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/proxy_list_rules_search_hint" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/proxy_add"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_gravity="center_vertical|end"
-                android:foreground="?selectableItemBackground"
-                android:padding="12dp"
-                app:srcCompat="@drawable/bigbrother_ic_add"
-                app:tint="?colorPrimary" />
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/proxy_add"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center_vertical|end"
+                    android:foreground="?selectableItemBackground"
+                    android:padding="12dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/bigbrother_ic_add"
+                    app:tint="?colorPrimary" />
+
+                <com.google.android.material.switchmaterial.SwitchMaterial
+                    android:id="@+id/proxy_toggle_all"
+                    android:layout_width="wrap_content"
+                    android:layout_height="?minTouchTargetSize"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:checked="true"
+                    android:text="@string/proxy_list_rules_disable_all"
+                    android:theme="@style/BigBrotherSwitch"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/proxy_search_layout"
+                    app:switchPadding="@dimen/bb_spacing_m" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -51,7 +75,8 @@
         android:id="@+id/proxy_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:listitem="@layout/bigbrother_item_proxy_rule" />
 
     <LinearLayout
         android:id="@+id/proxy_empty_state"
